# video-streaming-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: env.sample
src/authentication/: managers.py  models.py  tasks.py
src/authentication/api/v1/: urls.py
src/authentication/api/v1/serializers/: login.py  register.py  reset_password.py  user.py
src/authentication/api/v1/views/: login.py  register.py  reset_password.py  user.py
src/authentication/backends/: email_backend.py
src/authentication/migrations/: 0001_initial.py  0002_alter_user_profile_image.py
src/content/: models.py  tasks.py
src/content/api/v1/: urls.py
src/content/api/v1/serializers/: video.py
src/content/api/v1/views/: video.py
src/content/migrations/: 0001_initial.py  0002_video_is_processing.py  0003_videogenre_video_genres.py
src/shared/mixins/: model_mixins.py  view_mixins.py
src/shared/responses/: exceptions.py  renderers.py
src/shared/urls/: v1.py
src/templates/: register.html  reset-password.html
src/video_streaming/: celery.py  settings.py  urls.py
